--- a/cargame2/CarGame/CarGame.vcxproj.filters
+++ b/cargame2/CarGame/CarGame.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClCompile Include="CarGameCode\Logic\GameObjects\Collider.cpp">
       <Filter>Archivos de código fuente</Filter>
     </ClCompile>
+    <ClCompile Include="CarGameCode\Logic\GameObjectContainer.cpp">
+      <Filter>Archivos de código fuente</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CarGameCode\Logic\Game.h" />
@@ -52,5 +55,6 @@
     <ClInclude Include="CarGameCode\Logic\GameObjects\Meta.h" />
     <ClInclude Include="CarGameCode\Logic\GameObjects\GameObject.h" />
     <ClInclude Include="CarGameCode\Logic\GameObjects\Collider.h" />
+    <ClInclude Include="CarGameCode\Logic\GameObjectContainer.h" />
   </ItemGroup>
 </Project>
